--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>Trying out pages</p>
-</body>
-</html>
+---
+layout: default
+title: Page 1
+---
+<div class="blurb">
+	<h1>Page info</h1>
+	<p>Test page</p>
+</div>
