--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@ layout: default
 title: Page 1
 ---
 <div class="blurb">
-	<h1>Page info</h1>
-	<p>Test page</p>
+	<p>CoderDojo is a free club where kids can learn to code. All children are welcome. At the moment, we run biweekly sessions on a Sunday at Porirua College.</p>
 </div>
