--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Page 1
+title: Home
 ---
 <div class="blurb">
 	<p>Coder Dojo is a free club where kids can learn to code. All children are welcome. At the moment, we run biweekly sessions on a Sunday at Porirua College.</p>
